--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "create-admin": "tsx scripts/create-admin-user.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.64",
     "@ai-sdk/react": "^2.0.90",
-    "@anthropic-ai/sdk": "^0.68.0",
     "@deepgram/sdk": "^4.11.2",
     "@hookform/resolvers": "^5.2.2",
     "@openrouter/ai-sdk-provider": "^1.2.1",
@@ -43,7 +41,7 @@
     "ai": "^5.0.90",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eventsource-parser": "^3.0.6",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
@@ -77,9 +75,9 @@
     "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-jest": "^0.0.1",
     "tsx": "^4.20.6",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
