--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,14 @@ jobs:
       # Stage 6: Dependency Security Scan (SCA)
       - name: Run npm audit (production only)
         run: |
-          npm audit --audit-level=moderate --production || true
+          npm audit --audit-level=moderate --omit=dev || true
           
       - name: Check for high/critical vulnerabilities
         run: |
-          AUDIT_OUTPUT=$(npm audit --audit-level=high --production --json || true)
+          AUDIT_OUTPUT=$(npm audit --audit-level=high --omit=dev --json || true)
           if echo "$AUDIT_OUTPUT" | grep -q '"vulnerabilities":{[^}]*"high"\|"critical"'; then
             echo "High or Critical vulnerabilities found"
-            npm audit --audit-level=high --production
+            npm audit --audit-level=high --omit=dev
             exit 1
           else
             echo "No high/critical vulnerabilities found"
