--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eventsource-parser": "^3.0.6",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "openai": "^6.8.1",
     "react": "19.2.0",
@@ -80,7 +80,7 @@
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.15",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.3",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
