--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-jest": "^0.0.1",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
