--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/msme-mitr:${{ github.sha }}
             ${{ secrets.DOCKERHUB_USERNAME }}/msme-mitr:latest
